# Mathematics

./: .gitmodules  AffineTransform.hpp  AxisAlignedBox.hpp  AxisAlignedRectangle.hpp  Bezier.inl  BezierCurve2.hpp  BezierCurve3.hpp  CMakeLists.txt  Capsule.hpp  Circle2.hpp  Cone.hpp  Constants.hpp  Containment.inl  ConvexPolyhedron.hpp  Cylinder.hpp  Distances.inl  Ellipsoid.hpp  Euler.hpp  EulerOrder.hpp  HalfSpace.hpp  Intersections.inl  Interval.hpp  LU.inl  Line2.hpp  Line3.hpp  LineSegment2.hpp  LineSegment3.hpp  Mathematics.hpp  Mathematics.vcxproj  Mathematics.vcxproj.filters  Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  OrientedBox.hpp  Plane.hpp  Quadrilateral3.hpp  Quaternion.hpp  README.md  Random.hpp  Ray2.hpp  (+17 more)
Include/Mathematics/: Mathematics.hpp  Random.hpp
Include/Mathematics/Algebra/: Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  Quaternion.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Include/Mathematics/Analysis/: Containment.inl  Distances.inl  Intersections.inl  Perlin.inl  Romberg.inl
Include/Mathematics/Geometry/: AxisAlignedBox.hpp  AxisAlignedRectangle.hpp  BezierCurve2.hpp  BezierCurve3.hpp  Capsule.hpp  Circle2.hpp  Cone.hpp  ConvexPolyhedron.hpp  Cylinder.hpp  Ellipsoid.hpp  HalfSpace.hpp  Hermite.inl  Line2.hpp  Line3.hpp  LineSegment2.hpp  LineSegment3.hpp  OrientedBox.hpp  Plane.hpp  Quadrilateral3.hpp  Ray2.hpp  Ray3.hpp  Sphere.hpp  SymmetricFrustum.hpp  TetrahedralMesh.hpp  Tetrahedron.hpp  Torus.hpp  Triangle3.hpp  TriangleMesh.hpp  Triangulation.inl
Include/Mathematics/Transform/: AffineTransform.hpp  Euler.hpp  EulerOrder.hpp  YawPitchRoll.hpp
include/Mathematics/Algebra/: Matrix2.hpp  Matrix3.hpp  Quaternion.hpp  Vector4.hpp
include/Mathematics/Analysis/: Intersections.inl  Perlin.inl
include/Mathematics/Core/: Constants.hpp  Interval.hpp  Scalar.hpp  SymmetricFrustum.hpp
include/Mathematics/Geometry/Primitives/: Line3.hpp  Segment2.hpp  Segment3.hpp
include/Mathematics/Geometry/Shapes/: Capsule.hpp  Cylinder.hpp  Ellipsoid.hpp  Sphere.hpp
include/Mathematics/Geometry/Triangle/: Triangulation.inl
include/Mathematics/Transform/: AffineTransform.hpp  Axis.hpp  YawPitchRoll.hpp
